@@ -28,8 +28,8 @@ $EM_CONF[$_EXTKEY] = array(
 	'clearCacheOnLoad' => 0,
 	'lockType' => '',
 	'author' => 'Mario Rimann',
-	'author_email' => 'typo3-coding@rimann.org',
-	'author_company' => '',
+	'author_email' => 'mario@screenteam.com',
+	'author_company' => 'Screenteam GmbH',
 	'CGLcompliance' => '',
 	'CGLcompliance_note' => '',
 	'version' => '0.7.99',
