@@ -2,7 +2,7 @@
 /***************************************************************
 *  Copyright notice
 *
-*  (c) 2005-2009 Mario Rimann (typo3-coding@rimann.org)
+*  (c) 2005-2009 Mario Rimann (mario@screenteam.com)
 *  All rights reserved
 *
 *  This script is part of the TYPO3 project. The TYPO3 project is
@@ -24,7 +24,7 @@
 /**
  * Plugin 'BZD Staff Directory' for the 'bzdstaffdirectory' extension.
  *
- * @author	Mario Rimann <typo3-coding@rimann.org>
+ * @author	Mario Rimann <mario@screenteam.com>
  */
 
 
